fix alignment of header across all widths

--- a/jeweetwel.css
+++ b/jeweetwel.css
@@ -30,7 +30,11 @@ a:hover,
 }
 
 #header {
-  margin-left: 17.7%;
+  margin-left: 14%;
+}
+
+#header .section {
+  margin-left: 3em;
 }
 
 #content,
@@ -88,10 +92,14 @@ h2 {
 
 body.not-front .field-type-image {
   float: none;
-  text-align: center;
+  text-align: left;
   margin: 0;
   padding: 1em 0;
   border-width: 0;
+}
+
+.field-type-image a img:hover {
+    border-color: #F3710C;
 }
 
 .item-list .pager li {
